[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]

[dependencies]

[[bin]]
name = "genppm"
path = "src/genppm.rs"

[[bin]]
name = "genppm2"
path = "src/genppm2.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main5"
path = "src/main5.rs"

[[bin]]
name = "main55"
path = "src/main55.rs"
